--- a/PlayFramework-Backend/conf/application.conf
+++ b/PlayFramework-Backend/conf/application.conf
@@ -4,25 +4,25 @@
   ebean.default = ["models.*"]
   
   #Local Database
-  db {
-   default.driver=org.postgresql.Driver
-   default.url="jdbc:postgresql://localhost/ITShopDB"
-   default.user=postgres
-   default.password="retro123"
-   default.logStatements=true
-  }
+  #db {
+   #default.driver=org.postgresql.Driver
+   #default.url="jdbc:postgresql://localhost/ITShopDB"
+   #default.user=postgres
+   #default.password="retro123"
+   #default.logStatements=true
+  #}
   
   #Admin Credentials
-  custom {
-    admin.mail=${?ADMIN_MAIL}
-    admin.password=${?ADMIN_PASSWORD}
-  }
+  #custom {
+   # admin.mail=${?ADMIN_MAIL}
+   # admin.password=${?ADMIN_PASSWORD}
+  #}
   
 
   #Amazon Details
-  aws.access.key=${?AWS_ACCESS_KEY}
-  aws.secret.key=${?AWS_SECRET_KEY}
-  aws.s3.bucket=${?S3_BUCKET_NAME}
+  #aws.access.key=${?AWS_ACCESS_KEY}
+  #aws.secret.key=${?AWS_SECRET_KEY}
+  #aws.s3.bucket=${?S3_BUCKET_NAME}
   
   #Filter Setting
   play.filters.enabled += "play.filters.cors.CORSFilter"
@@ -34,7 +34,7 @@
       # Filter paths by a whitelist of path prefixes
       #pathPrefixes = ["/some/path", ...]
   
-      allowedOrigins = ["http://localhost:4200", "https://ITShop-Travnik-Frontend.herokuapp.com"]
+      allowedOrigins = ["http://localhost:4200", "https://ITShopTravnik.herokuapp.com"]
       allowedHttpMethods = ["GET", "POST", "PUT", "DELETE", "OPTIONS"]
     }
   
