Minor Config Fix

--- a/PlayFramework-Backend/conf/application.conf
+++ b/PlayFramework-Backend/conf/application.conf
@@ -34,12 +34,12 @@
       # Filter paths by a whitelist of path prefixes
       #pathPrefixes = ["/some/path", ...]
   
-      allowedOrigins = ["http://localhost:4200", "https://ITShopTravnik.herokuapp.com"]
+      allowedOrigins = ["http://localhost:4200", "https://itshop-travnik.herokuapp.com"]
       allowedHttpMethods = ["GET", "POST", "PUT", "DELETE", "OPTIONS"]
     }
   
     hosts {
-      allowed = ["localhost:9000", "ITShop-Travnik-Backend.herokuapp.com"]
+      allowed = ["localhost:9000", "itshop-travnik-backend.herokuapp.com"]
     }
     
     csrf.header.bypassHeaders {
