--- a/PlayFramework-Backend/conf/application.conf
+++ b/PlayFramework-Backend/conf/application.conf
@@ -13,16 +13,15 @@
   #}
   
   #Admin Credentials
-  #custom {
-   # admin.mail=${?ADMIN_MAIL}
-   # admin.password=${?ADMIN_PASSWORD}
-  #}
+  custom {
+    admin.token=${?ADMIN_TOKEN}
+  }
   
 
   #Amazon Details
-  #aws.access.key=${?AWS_ACCESS_KEY}
-  #aws.secret.key=${?AWS_SECRET_KEY}
-  #aws.s3.bucket=${?S3_BUCKET_NAME}
+  aws.access.key=${?AWS_ACCESS_KEY}
+  aws.secret.key=${?AWS_SECRET_KEY}
+  aws.s3.bucket=${?S3_BUCKET_NAME}
   
   #Filter Setting
   play.filters.enabled += "play.filters.cors.CORSFilter"
