Added gmail mssging service

--- a/PlayFramework-Backend/conf/application.conf
+++ b/PlayFramework-Backend/conf/application.conf
@@ -17,6 +17,18 @@
     admin.token=${?ADMIN_TOKEN}
   }
   
+  #Mail Service
+  play.mailer {
+    host="smtp.gmail.com"
+	port=587
+	ssl=no
+	tls=yes
+	user=${?GMAIL_ACCOUNT}
+	password=${?GMAIL_PASSWORD}
+	debug=no
+    mock=false
+  }
+  
 
   #Amazon Details
   aws.access.key=${?AWS_ACCESS_KEY}
